--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -13,8 +13,8 @@
 #= require jquery
 #= require jquery_ujs
 #= require jquery.form
-#= require jquery.sortable
 #= require jquery-ui
+#= require jquery-ui/widgets/sortable
 #= require jquery.ui.touch-punch
 #= require turbolinks
 #= require bootstrap-sprockets
