Kartenlayout für Desktopclient, Layout für Startseite und Anlegen von Meldungen im Desktopclient

--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -4,12 +4,25 @@
   margin: 0
   padding: 0
 
-#ol-map
+.ol-map-mobile
   bottom: 0
   left: 0
   position: absolute
   right: 0
   top: 50px
+
+.ol-map-desktop
+  bottom: 50px
+  left: 0
+  position: absolute
+  right: 0
+  top: 100px
+
+  .ol-zoom
+    left: 345px
+  
+  .ol-scale-line
+    left: 305px
 
 .ol-touch .ol-control
   button
