--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -350,8 +350,9 @@ if id = KS.getUrlParam('request')
 $ ->
   KS.olMap = new KS.Map
 
-  KS.map.actions().on('click', 'a.describe', (event) ->
+  $(document).on('click', 'a.describe', (event) ->
     if (features = KS.newFeatureOverlay.getFeatures().getArray()).length > 0
+      console.log(features)
       $.ajax
         url: $(@).attr('href')
         data:
