--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require OpenLayers
+ *= require bootstrap.vertical-tabs
  *= require_tree .
  *= require_self
  */
@@ -59,3 +60,72 @@ option.placeholder
 
 #image-sources
   display: none
+
+.sidebar
+  background-color: #fff
+  border-right: solid 1px #ddd
+  width: 300px
+  height: 100%
+  position: absolute
+  z-index: 1000
+
+.sidebar .tab-content
+  padding: 10px
+
+.sidebar .sideways.tabs-right
+  position: fixed
+  left: 300px
+  width: 0px
+  top: 110px
+
+.sideways > li
+  left: -28px
+  margin-bottom: 100px
+
+.sideways > li > a
+  background-color: #fff
+  opacity: 0.8
+
+.sideways > li.active > a
+  opacity: 1.0
+
+.panel.panel-default
+  top: 20px
+
+.map-panel
+  width: 250px
+  height: 150px
+  position: absolute
+  top: 10px
+  right: 10px
+  z-index: 1000
+
+.panel-heading
+  font-weight: bold
+
+.map-panel .panel-heading
+  padding: 3px
+
+header
+  padding: 10px 0
+  background-color: #1c94c4
+  height: 100px
+
+  .systray
+    position: relative
+    color: #fff
+
+    > div
+      position: absolute
+      right: 0
+
+.footer
+  position: fixed
+  bottom: 0px
+  padding: 10px 0
+  width: 100%
+  height: 50px
+  background-color: #1c94c4
+
+.container
+  width: 95%
