--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -68,6 +68,7 @@ option.placeholder
   height: 100%
   position: absolute
   z-index: 1000
+  overflow-y: auto
 
 .sidebar .tab-content
   padding: 10px
