--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -28,3 +28,6 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="flash" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
+  <div class="modal-dialog"><div class="modal-content"></div></div>
+</div>
