--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -68,7 +68,6 @@ option.placeholder
   height: 100%
   position: absolute
   z-index: 1000
-  overflow-y: auto
 
 .sidebar .tab-content
   padding: 10px
@@ -130,3 +129,8 @@ header
 
 .container
   width: 95%
+
+.list-group.desktop
+  position: relative
+  max-height: 80%
+  overflow-y: auto
