--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -93,8 +93,8 @@ option.placeholder
   top: 20px
 
 .map-panel
-  width: 300px
-  max-height: 150px
+  min-width: 140px
+  max-width: 350px
   position: absolute
   top: 10px
   right: 10px
@@ -104,7 +104,7 @@ option.placeholder
   font-weight: bold
 
 .map-panel .panel-heading
-  padding: 3px
+  padding: 5px
   background-color: #1c94c4
   color: #fff
 
